workloads/deployment-toleration.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      nodeSelector:
        workload: high-memory

      containers:
      - name: nginx
        image: nginx:latest
