workloads/deployment-with-secret.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-secret-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-secret

  template:
    metadata:
      labels:
        app: nginx-secret

    spec:
      containers:
      - name: nginx
        image: nginx-jadeja0123
