workloads/deployment_devops.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-deployment

spec:
  replicas: 10

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
