workloads/empty-dir.yaml
apiVersion: v1
kind: Pod

metadata:
  name: emptydir-demo

spec:
  containers:

  - name: writer
    image: busybox
    command:
    - sh
    - -c
    - |
      while true
      do
        date > /shared/index.html
        sleep 5
      done

    volumeMounts:
    - name: shared
      mountPath: /shared

  - name: nginx
    image: nginx

    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html

  volumes:
  - name: shared
    emptyDir: {}
