workloads/empty.yaml
```
apiVersion: v1
kind: Pod

metadata:
  name: nginx-emptydir-demo

spec:
  containers:

  - name: writer
    image: busybox

    command:
    - sh
    - -c
    - |
      while true
      do
        date > /shared/index.html
        sleep 5
      done

    volumeMounts:
    - name: website
      mountPath: /shared

  - name: nginx
    image: nginx

    volumeMounts:
    - name: website
      mountPath: /usr/share/nginx/html

  volumes:
  - name: website
    emptyDir: {}
```
