workloads/host-volume.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-hostpath

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest

        volumeMounts:
        - name: my-storage
          mountPath: /usr/share/nginx/html

      volumes:
      - name: my-storage
        hostPath:
          path: /tmp/nginx-data
          type: DirectoryOrCreate
