workloads/label-nodeselectore.yaml
kubectl label node node2 workload=application
kubectl get nodes --show-labels

apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      nodeSelector:
        workload: application

      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
